# yadirect-alert-bot

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  initial.sql  pyproject.toml  requirements.txt
yadirect-admin/: Dockerfile  README.MD  next.config.mjs  package.json
yadirect-admin/src/app/: _refine_context.tsx  layout.tsx  page.tsx
yadirect-admin/src/i18n/: config.ts
yadirect-admin/src/styles/: global.css
yadirect-admin/src/utility/: constants.ts  roles.ts
yadirect-old/: Dockerfile  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
yadirect-old/yandexDirectBot/: admin.py  celery.py  tasks.py
yadirect-old/yandexDirectBot/src/: utils.py
yadirect-strapi/: Dockerfile  index.d.ts  package.json
yadirect-strapi/config/: cronTasks.ts  database.ts  external.ts  middlewares.ts  server.ts
yadirect-strapi/config/sync/: admin-role.strapi-super-admin.json  core-store.plugin_content_manager_configuration_components##yadirect-components.goal.json  user-role.authenticated.json  user-role.public.json  (+6 more)
yadirect-strapi/src/: index.ts
yandexDirectBot/: admin.py  asgi.py  celery.py  forms.py  models.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
yandexDirectBot/migrations/: 0001_initial.py  0002_yandexdirectaccount_balance.py  0003_yandexdirectaccount_notified.py  0004_remove_project_week_budget_and_more.py  0005_remove_yandexdirectaccount_week_budget_and_more.py  0006_project_goals.py  0007_yandexdirectaccount_monthly_budget.py
yandexDirectBot/src/: api.py  tasks.py  telegram_alert.py  telegram_api.py  utils.py
(+71 files in other folders)
