[tool.poetry]
name = "scavengerhunt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pytelegrambotapi = "^4.16.1"
django-jazzmin = "3.0.0"
psycopg2 = "^2.9.9"
celery = "^5.3.6"
redis = "^5.0.3"
sentry-sdk = {extras = ["django"], version = "^2.10.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
